...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backButton"
                style="@style/backButton"
                android:contentDescription="@string/back_button"
                android:onClick="@{() -> viewModel.navigateBack()}"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/createContactTitle"
                        app:prodNameHelperTextColorSwitcher="@{viewModel.contactFirstName}"
                        app:startIconDrawable="@drawable/ic_baseline_person_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactFirstNameEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:inputType="textCapWords"
                            android:text="@={viewModel.contactFirstName}" />
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/contactFirstNameEditTextLayout"
                        app:layout_constraintTop_toBottomOf="@id/createContactTitle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactLastnameEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:inputType="textCapWords"
                            android:text="@={viewModel.contactLastName}" />
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contactFirstNameEditTextLayout"
                        app:startIconDrawable="@drawable/fui_ic_phone_white_24dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactPhoneEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            setPhoneNumberTextWatcher="@={viewModel.contactPhone}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="phone" />
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contactPhoneEditTextLayout"
                        app:startIconDrawable="@drawable/ic_baseline_work_outline_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactPositionEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/position"
                            android:inputType="textCapWords"
                            android:text="@={viewModel.contactPosition}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/contactProductionTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        checkEditingEnabled="@{viewModel.enableEditing}"
                        checkEmptyArray="@{viewModel._productionListArray}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contactEmailEditTextLayout"
                        app:layout_constraintVertical_bias="0.0"
                        app:startIconDrawable="@drawable/facebook_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactFacebookEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/facebook"
                            android:inputType="text"
                            android:text="@={viewModel.contactFacebook}" />
...
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/contactFacebookEditTextLayout"
                        app:layout_constraintTop_toBottomOf="@id/contactEmailEditTextLayout"
                        app:startIconDrawable="@drawable/instagram_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactInstagramEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/instagram"
                            android:inputType="text"
                            android:text="@={viewModel.contactInstagram}" />
...
                app:fabSize="normal"
                app:layout_anchorGravity="bottom|left|start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addContactFab"
                setEnabled="@{viewModel.contactFirstName}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
...
