...
                        app:helperTextTextColor="@color/warningRed"
                        app:hintTextColor="@color/purpleLogoLight"
                        app:prodNameHelperTextColorSwitcher="@{viewModel.productionName}"
                        app:startIconDrawable="@drawable/ic_baseline_business_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productionNameEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textCapWords"
                            android:text="@={viewModel.productionName}" />
...
                        app:helperText="Optional"
                        app:helperTextTextColor="@color/optionalGrey"
                        app:hintTextColor="@color/purpleLogoLight"
                        app:startIconDrawable="@drawable/ic_baseline_location_searching_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productionAddressEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:inputType="textPostalAddress"
                            android:text="@={viewModel.productionAddress}" />
...
                        app:helperText="Optional"
                        app:helperTextTextColor="@color/optionalGrey"
                        app:hintTextColor="@color/purpleLogoLight"
                        app:startIconDrawable="@drawable/fui_ic_phone_white_24dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productionPhoneEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            setPhoneNumberTextWatcher="@={viewModel.productionPhone}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="phone" />
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/productionPhoneEditTextLayout"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productionEmailEditText"
                            style="@style/LoginTextInputInnerFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.productionEmail}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/enableEditingSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/productionEmailEditTextLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/enableEditSwitchMarginTop"
                        android:checked="@={viewModel.enableEditing}"
...
                app:fabSize="normal"
                app:layout_anchorGravity="bottom|left|start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addProductionFab"
                setEnabled="@{viewModel.productionName}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="118dp"
                android:backgroundTint="@color/white"
...
