...
    <string name="firebaseLoginFailureToast">You have entered an incorrect account</string>
    <string name="authenticationFailed">Authentication Failed!</string>
    <string name="emailAddressNotValidToast">Email Address is Not Valid</string>
    <string name="enterEmailAddressToast">Please Enter Your Email Address</string>
    <string name="pleaseEnterPasswordToast">Please Enter a Password</string>
    <string name="editContactTitle">Edit Contact</string>
    <string name="contact">Contacts</string>
    <string name="calendar">Calendar</string>
    <string name="firstNameRequiredToast">A First Name is Required</string>
    <string name="contactSavedToast">Contact Saved</string>
    <string name="contactDeletedToast">Contact Deleted</string>
    <string name="upcomingWork">Upcoming Work</string>
    <string name="editRate">Edit Rate</string>
...
    <string name="databaseRetrievedToast">Database Retrieved</string>
    <string name="noBackupsFoundToast">No Backups Found</string>
    <string name="unableToConnectToNetworkToast">Unable to connect, check your network connection</string>
    <string name="unableToConnectFirebaseAccountToast">Unable to Connect to Your Account</string>
    <string name="backupDatabaseItemNullToast">The BackUpDatabase Item Received Is Null</string>
    <string name="editProduction">Edit Production</string>
    <string name="productions">Productions</string>
    <string name="productionSaved">Production Saved</string>
    <string name="properProductionNameRequiredToast">A Proper Production Name is Required</string>
    <string name="productionDeletedToast">Production Deleted</string>
    <string name="editWorkDay">Edit Work Day</string>
    <string name="scheduledWork">Scheduled Work</string>
    <string name="workDayDeletedToast">Work Day Deleted</string>
...
