...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                tools:text="Production Name" />

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="12dp"
                android:background="@color/fui_transparent"
                android:contentDescription="@string/edit_button"
                android:elevation="12dp"
...


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/contactCardView"
                checkForEmptyContacts="@{viewModel.contactList.size()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="18dp"
...
